Revert "broken anti-csrf implementation"
This reverts commit 60d76ab40ed13ebad6db06d18da3b1d344347659.

--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -352,6 +352,7 @@
                                             View and edit individual cookie values. This is useful for fine-tuning specific preferences or troubleshooting issues.
                                         </p>
                                         {{- range k, v := CookieList }}
+                                        {{ CSRFToken, _ := CookieList["pixivfe-CSRF"] }}
                                         <div class="mb-3">
                                           <h4 class="h6 fw-bold">{{k}}</h4>
 
